log/build_2026-05-06_22-15-55/planning/stderr.log
  File "/home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/planning/launch/duplo.launch.py", line 70
    ])
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 35

